fix mobile experience page being too narrow

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 
 body {
   background-color: var(--white);
-  font-family: Consolas;
+  font-family: Consolas, Sans-serif;
 }
 
 h2 {
@@ -177,11 +177,17 @@ ul {
   font-family:'Poppins', sans-serif;
   perspective:800px;
 } */
+#experience {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #experience-body{
   width:100%;
   min-height:100vh;
   justify-content:center;
   align-items:center;
+  
 }
 #experience-title-text {
   text-align: center;
@@ -190,7 +196,7 @@ ul {
   margin-top: 3%;
 }
 .timeline{
-  width: 60%;
+  width: 90%;
   color:#fff;
   padding:30px 20px;
   margin-left: auto;
